<resources>
    <string name="app_name">androidProjcectCollectly</string>
    <string name="hint_gameConsole">Wii</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">GameConsole not saved because it is empty.</string>

    <string name="add_gameConsole">Add a gameConsole</string>
    <string name="title_activity_nav">nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_game">Mario Bros</string>
    <!-- Englisch items -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_games">Games</string>
    <string name="title_add_game">Add Game</string>
    <string name="title_add_gameconsole">Add gameconsole</string>
    <string name="title_collections">Collections</string>
    <string name="title_priceCheck">Steam searcher</string>
    <string name="title_settings">Settings</string>
    <!-- Radio button strings-->

    <string name="title_radioButton">Select language</string>
    <string name="title_taal_english">English</string>
    <string name="Dutch_RadioButton">Dutch</string>
    <string name="steamId_hint">SteamID</string>
    <string name="error_steamProfile_empty">Don\'t leave the steamId empty</string>
    <string name="Steam_profile_not_found">Player profile not found</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="Country_unavailable">Unavailable (private)</string>
    <string name="GameConsole_delete_message">GameConsoles are deleted and their games</string>
    <string name="GameConsole_field_blank">You cannot leave the gameConsole field empty</string>
    <string name="Succes_message_delete">Successfull deleted</string>
    <string name="appwidget_text">Click to open</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is to open the app</string>
    <string name="text_delete_all_gameconsoles">To delete all game consoles press the button below:</string>
    <string name="text_delete_all_games_gameconsole">To delete all games of a spesific console fill in the name of the console:</string>
    <string name="text_button_delete_games">delete games</string>
    <string name="button_delete_gameconsoles">Delete GameConsoles</string>
    <string name="button_steam_profile_searcher">search profile</string>
    <string name="No_internet_banner">Currently there is no internet connection! This function will not work</string>
    <string name="text_profiel_name">Profile name:</string>
    <string name="text_country">Country:</string>
    <string name="text_default" translatable="false">textView</string>
    <string name="text_steamId" translatable="false">SteamID</string>
    <string name="text_steamID_profile" translatable="false">SteamID:</string>
    <string name="text_darkmode" translatable="false">DarkMode</string>
    <string name="text_gameconsole" translatable="false">GameConsole:</string>
    <string name="title_notification">Wifi is turned off!!!</string>

</resources>