<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidprojcectcollectly.ui.collections.GameConsoleFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.androidprojcectcollectly.ui.steamProfileSearcher.SteamProfileSearcherFragment"
        android:label="@string/title_priceCheck"
        tools:layout="@layout/fragment_steam_profile_searcher" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.androidprojcectcollectly.ui.profile.ProfileFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_games"
        android:name="com.example.androidprojcectcollectly.ui.game.GamesFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" >
        <action
            android:id="@+id/action_navigation_games_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_games"
        android:name="com.example.androidprojcectcollectly.ui.game.AddGameFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_add_game" >
        <action
            android:id="@+id/action_navigation_add_games_to_navigation_games"
            app:destination="@id/navigation_games" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_gameConsole"
        android:name="com.example.androidprojcectcollectly.ui.collections.AddGameConsoleFragment"
        android:label="@string/title_add_gameconsole"
        tools:layout="@layout/fragment_add_game_console" >
        <action
            android:id="@+id/action_navigation_add_gameConsole_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_Steam_Profile"
        android:name="com.example.androidprojcectcollectly.ui.steamProfileSearcher.SteamProfileFragment"
        android:label="SteamProfile"
        tools:layout="@layout/fragment_steam_profile" >
        <action
            android:id="@+id/action_navigation_Steam_Profile_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

</navigation>